--- a/index.html
+++ b/index.html
@@ -7,71 +7,32 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type=text/css href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" type=text/css href="styles.css">
 
-    <title>Hello, world!</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+    <title>Environmental Impact Accessment</title>
   </head>
   <body>
-
-    <h1>Hello, world!</h1>
-    <input type="file" onchange="previewFile()"><br>
-    <img src="" height="200" alt="">
-<!--
-    <script>
-    $('#multi_file_upload').change(function(e) {
-    var file_id = e.target.id;
-
-    var file_name_arr = new Array();
-    var process_path = site_url + 'public/uploads/';
-
-    for (i = 0; i < $("#" + file_id).prop("files").length; i++) {
-
-        var form_data = new FormData();
-        var file_data = $("#" + file_id).prop("files")[i];
-        form_data.append("file_name", file_data);
-
-        if (check_multifile_logo($("#" + file_id).prop("files")[i]['name'])) {
-            $.ajax({
-                //url         :   site_url + "inc/upload_image.php?width=96&height=60&show_small=1",
-                url: site_url + "inc/upload_contact_info.php",
-                cache: false,
-                contentType: false,
-                processData: false,
-                async: false,
-                data: form_data,
-                type: 'post',
-                success: function(data) {
-                    // display image
-                }
-            });
-        } else {
-            $("#" + html_div).html('');
-            alert('We only accept JPG, JPEG, PNG, GIF and BMP files');
-        }
-
-    }
-});
-
-function check_multifile_logo(file) {
-    var extension = file.substr((file.lastIndexOf('.') + 1))
-    if (extension === 'jpg' || extension === 'jpeg' || extension === 'gif' || extension === 'png' || extension === 'bmp') {
-        return true;
-    } else {
-        return false;
-    }
-}
-</script>
--->
-
     <div class="container">
         <div class="row">
-            <div class="col-12">
-
+            <div class="col-12 my-4 text-center">
+              <h1>Let it go -EIS.a</h1>
+              <h4>Preliminary Environmental Impact Statement</h4>
             </div>
             <div class="col-12">
-                <h3>This is your photo</h3>
+              <p>Use this website to analyze images of a property being considered for a project. <b>A preliminary environmental impact statement </b>provides a first look into the potential effects of a proposed construction plan on existing wildlife and infrastructure existent in the given geographical area. In compliance with the National Environmental Policy Act (NEPA) and other relevant Federal and State laws and regulations, an environmental impact statement is vital for any construction, renovation, or significant land alteration project.</p>
             </div>
-            <div class="col-12">
-                <h3>Download Environmental Impact Assesment</h3>
+            <div class="col-6">
+              <p><i>Please upload a photo of the property you want to analyze.</i></p>
+              <input type="file" onchange="previewFile()"><br>
+              <img src="" width="100%" alt="">
+            </div>
+      
+            <div class="col-6">
+              <h4><b><i>PDF Printout</b></i><h4>
+              <h5><i>Please upload file.</i><h4>
             </div>
         </div>
     </div>
